# anagram

./: .gitignore  CMakeLists.txt  LICENSE  README.md  anagram.cpp  anagram.h  anagram_simd.cpp  build.bash  fixFormat.bash  macros.h  main.cpp
