cmake_minimum_required(VERSION 3.10.2)


if(DEFINED ENV{ENABLE_SIMD})
  add_definitions(-DUSE_SIMD)
  message("cmake ignoring flags CMAKE_CXX_FLAGS and CMAKE_CXX_FLAGS_RELEASE...")
  message("the environment variable will be ignored if the CMAKE_CXX_FLAGS variable is defined.")
  message("but if I didn't set CXXFLAGS in the environment, CMAKE_CXX_FLAGS will be empty! ")
  set(CMAKE_CXX_FLAGS "-O2 -Wall -std=c++11 -mavx2")
  set(CMAKE_CXX_FLAGS_RELEASE "-O2 -Wall -std=c++11 -mavx2")
  message("CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS}")
  message("CMAKE_CXX_FLAGS_RELEASE ${CMAKE_CXX_FLAGS_RELEASE}")
else()
  set(CMAKE_CXX_FLAGS_RELEASE "-O2 -Wall -std=c++11")
endif()

if(DEFINED ENV{IGNORE_LESS})
  #add_compile_definitions(IGNORE_WORDS_WITH_LESS_LETTERS)
  add_definitions(-DIGNORE_WORDS_WITH_LESS_LETTERS)
endif()

if(DEFINED ENV{ENABLE_SIMD})
  project (anagram_SIMD)
  add_executable(anagram_SIMD main.cpp)
else()
  project (anagram)
  add_executable(anagram main.cpp)
endif()
